sandbox/output
StockProfit.cpp:14:26: error: redefinition of 'getMaxProfitsAfterBuy'
vector<int> StockProfit::getMaxProfitsAfterBuy() {
                         ^
StockProfit.cpp:10:26: note: previous definition is here
vector<int> StockProfit::getMaxProfitsAfterBuy() {
                         ^
1 error generated.
make: *** [test] Error 1
